Tweak for Valentine's Day.

--- a/birds-eye-view/index.html
+++ b/birds-eye-view/index.html
@@ -39,7 +39,7 @@
   <div class="title slide" id="title">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love 💜<br> of the Web 🌐</a>
     </h2>
     <p class="tweets"><a href="https://twitter.com/search?f=tweets&amp;q=%23WebDev2019">#WebDev2019</a></p>
     <p class="author"><a href="https://ruben.verborgh.org/">Ruben Verborgh</a></p>
@@ -114,7 +114,7 @@
   <div class="toc slide" id="index">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li><a href="#origins">Dreams and visions</a></li>
@@ -127,7 +127,7 @@
   <div class="toc slide" id="origins">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li class="current"><a href="#origins">Dreams and visions</a></li>
@@ -257,7 +257,7 @@
   <div class="toc slide" id="definition">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li><a href="#origins">Dreams and visions</a></li>
@@ -560,7 +560,7 @@
   <div class="toc slide" id="foundation">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li><a href="#origins">Dreams and visions</a></li>
@@ -791,7 +791,7 @@
   <div class="toc slide" id="opportunities-challenges">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li><a href="#origins">Dreams and visions</a></li>
@@ -1065,7 +1065,7 @@
   <div class="toc slide" id="threats">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li><a href="#origins">Dreams and visions</a></li>
@@ -1285,7 +1285,7 @@
   <div class="toc slide" id="recap">
     <h2>
       <a class="series" href="../">Web Fundamentals</a><br>
-      <a class="module" href="#title">A Bird’s-Eye View of the Web</a>
+      <a class="module" href="#title">For the love of the Web</a>
     </h2>
     <ul>
       <li><a href="#origins">Dreams and visions</a></li>
