--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       <li><cite><a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a> by Tim Berners-Lee</cite></li>
       <li><cite><a href="http://www.emeraldgrouppublishing.com/products/backfiles/pdf/backfiles_sample_5.pdf">World-Wide Web: The Information Universe</a> by Tim Berners-Lee et al.</cite></li>
     </ul>
+    <h3>21 Feb 2018: <a href="./architecture/">Web Architecture &amp; Technologies</a></h3>
+    <h4>Reading materials</h4>
+    <ul>
+      <li><cite><a href="https://davidtnaylor.com/CostOfTheS.pdf">The Cost of the “S” in HTTPS</a> by David Naylor et al.</cite></li>
+    </ul>
   </section>
 
   <div class="title slide" id="title">
