Add 14 Mar section.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
     <ul>
       <li><cite><a href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/46310.pdf">Reflections on the REST Architectural Style and <q>Principled Design of the Modern Web Architecture</q></a> by Roy T. Fielding et al.</cite></li>
     </ul>
+    <h3>14 Mar 2019: <a href="./semantic-web/">The Semantic Web &amp; Linked Data</a></h3>
+    <h4>Reading materials</h4>
+    <ul>
+      <li><cite><a href="https://www-sop.inria.fr/acacia/fabien/lecture/licence_travaux_etude2002/TheSemanticWeb/">The Semantic Web</a> by Tim Berners-Lee et al.</cite></li>
+    </ul>
   </section>
 
   <div class="title slide" id="title">
