--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   <section id="overview">
     <h2>Edition 2018–2019</h2>
+
     <h3>14 Feb 2019: <a href="./birds-eye-view/">A Bird’s-Eye View of the Web</a></h3>
     <h4>Practicals</h4>
     <ul>
@@ -49,16 +50,19 @@
       <li><cite><a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a> by Tim Berners-Lee</cite></li>
       <li><cite><a href="http://www.emeraldgrouppublishing.com/products/backfiles/pdf/backfiles_sample_5.pdf">World-Wide Web: The Information Universe</a> by Tim Berners-Lee et al.</cite></li>
     </ul>
+
     <h3>21 Feb 2019: <a href="./architecture/">Web Architecture &amp; Technologies</a></h3>
     <h4>Reading materials</h4>
     <ul>
       <li><cite><a href="https://davidtnaylor.com/CostOfTheS.pdf">The Cost of the <q>S</q> in HTTPS</a> by David Naylor et al.</cite></li>
     </ul>
+
     <h3>28 Feb 2019: <a href="./web-apis/">Web APIs</a></h3>
     <h4>Reading materials</h4>
     <ul>
       <li><cite><a href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/46310.pdf">Reflections on the REST Architectural Style and <q>Principled Design of the Modern Web Architecture</q></a> by Roy T. Fielding et al.</cite></li>
     </ul>
+
     <h3>14 Mar 2019: <a href="./semantic-web/">The Semantic Web &amp; Linked Data</a></h3>
     <h4>Practicals</h4>
     <ul>
@@ -68,6 +72,8 @@
     <ul>
       <li><cite><a href="https://www-sop.inria.fr/acacia/fabien/lecture/licence_travaux_etude2002/TheSemanticWeb/">The Semantic Web</a> by Tim Berners-Lee et al.</cite></li>
     </ul>
+
+    <h3>28 Mar 2019: <a href="https://docs.google.com/presentation/d/136qwF2BwB9ZQoD1e-DizZBS5-b7ZRJ5gFK23uJlxAr8">Open Data</a> (Guest lecture)</h3>
   </section>
 
   <div class="title slide" id="title">
