Add 7 Mar section.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       <li><cite><a href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/46310.pdf">Reflections on the REST Architectural Style and <q>Principled Design of the Modern Web Architecture</q></a> by Roy T. Fielding et al.</cite></li>
     </ul>
 
+    <h3>7 Mar 2019: <a href="https://minerva.ugent.be/courses2018/C00377902018/document/WebDev_PL_metadatasemantiek.pdf?cidReq=C00377902018">Metadata and semantics</a> (Guest lecture)</h3>
+
     <h3>14 Mar 2019: <a href="./semantic-web/">The Semantic Web &amp; Linked Data</a></h3>
     <h4>Practicals</h4>
     <ul>
