--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
     </ul>
 
     <h3>28 Mar 2019: <a href="https://docs.google.com/presentation/d/136qwF2BwB9ZQoD1e-DizZBS5-b7ZRJ5gFK23uJlxAr8">Open Data</a> (Guest lecture)</h3>
+
+    <h3>25 Apr 2019: <a href="./decentralization/">Re-decentralizing the Web</a></h3>
+    <h4>Practicals</h4>
+    <ul>
+      <li><a href="https://github.ugent.be/pages/WebDevelopment/Practicum-3/">Lab 3</a></li>
+      <li><a href="https://github.ugent.be/pages/WebDevelopment/Hands-on-Linked-Data/">Hands-on Linked Data</a></li>
+    </ul>
+    <h4>Reading materials</h4>
+    <ul>
+      <li><cite><a href="https://ruben.verborgh.org/articles/redecentralizing-the-web/">Re-decentralizing the Web, for good this time</a> by Ruben Verborgh</cite></li>
+    </ul>
   </section>
 
   <div class="title slide" id="title">
