--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
     <ul>
       <li><cite><a href="https://ruben.verborgh.org/articles/redecentralizing-the-web/">Re-decentralizing the Web, for good this time</a> by Ruben Verborgh</cite></li>
     </ul>
+
+    <h3>9 May 2019: <a href="https://minerva.ugent.be/courses2018/C00377902018/document/WebDev_HVDS_Van_Het_Web.pdf?cidReq=C00377902018">Of the Web</a> / <a href="https://minerva.ugent.be/courses2018/C00377902018/document/WebDev_HVDS_Reference_Rot.pdf?cidReq=C00377902018">Reference Rot</a> / <a href="https://minerva.ugent.be/courses2018/C00377902018/document/WebDev_HVDS_Scholarly_Orphans.pdf?cidReq=C00377902018">Scholarly orphans</a> (Guest lecture)</h3>
+
+    <h3>16 May 2019: <a href="./linked-data-publishing/">Linked Data Publishing</a></h3>
   </section>
 
   <div class="title slide" id="title">
