--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <li><cite><a href="https://www-sop.inria.fr/acacia/fabien/lecture/licence_travaux_etude2002/TheSemanticWeb/">The Semantic Web</a> by Tim Berners-Lee et al.</cite></li>
     </ul>
 
+    <h3>28 Mar 2019: <a href="https://speakerdeck.com/pietercolpaert/an-introduction-to-open-data">Open Data</a> (Guest lecture)</h3>
+
     <h3>4 Apr 2019: <a href="https://minerva.ugent.be/courses2018/C00377902018/document/WebDev_PL_VideoinhetWeb.pdf?cidReq=C00377902018">Video in the Web</a> (Guest lecture)</h3>
 
     <h3>25 Apr 2019: <a href="./decentralization/">Re-decentralizing the Web</a></h3>
