--- a/web-apis/index.html
+++ b/web-apis/index.html
@@ -2098,6 +2098,10 @@ http://www.europeana.eu/portal/en/record/9200229/BibliographicResource_300013560
     <p class="tweets"><a href="https://twitter.com/search?f=tweets&amp;q=%23WebDev2020">#WebDev2020</a></p>
   </div>
 
+  <div class="slide" id="rest-song">
+    <iframe class="cover width height" src="https://www.youtube.com/embed/nSKp2StlS6s"></iframe>
+  </div>
+  
   <div class="slide" id="cartoon-customer">
     <figure class="cover height">
       <img src="images/cartoon-customer.jpg" alt="[a tree with a ladder]">
